<resources>
    <string name="app_name">Reco</string>
    <string name="facebook_application_id" translatable="false">facebook_application_id</string>
    <string name="facebook_login_protocol_scheme" translatable="false">facebook_login_protocol_scheme</string>
    <string name="image_description">background</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="signup_facebook">Sign up with facebook</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="login_facebook">Login with facebook</string>
    <string name="sign_up">Sign up</string>
    <string name="what_weight">What is your target weight?</string>
    <string name="kg">kg</string>
    <string name="next_step">Next step</string>
    <string name="what_height">What is your height?</string>
    <string name="cm">cm</string>
    <string name="when_birthday">When is your birthday?</string>
    <string name="finish">Finish</string>
    <string name="weight_str">Weight</string>
    <string name="fat_str">Body fat</string>
    <string name="muscle_str">Muscle</string>
    <string name="save">save</string>
    <string name="slash">/</string>
    <string name="prev">prev</string>
    <string name="next">next</string>
    <string name="loading">Loading...</string>
    <string name="dot">.</string>
    <string name="note">Note</string>
    <string name="percent">%</string>
    <string name="setting">Setting</string>
    <string name="challenge">Challenge</string>
    <string name="choose_challenge">Choose your challenge</string>
    <string name="challenge_name">Challenge Name</string>
    <string name="new_challenge">New Challenge</string>
    <string name="cong">Congratulations!</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
</resources>
