<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/scale"
        android:layout_marginBottom="@dimen/margin20"/>

    <TextView
        style="@style/question_text"
        android:text="@string/what_weight"
        android:layout_marginBottom="@dimen/margin40"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/progress1"
        android:layout_marginBottom="@dimen/margin40"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin20"
        android:gravity="center">

        <NumberPicker
            android:id="@+id/weight_num1"
            style="@style/picker7"></NumberPicker>

        <NumberPicker
            android:id="@+id/weight_num2"
            style="@style/picker7"></NumberPicker>

        <TextView
            android:text="@string/dot"
            style="@style/unit_text" />

        <NumberPicker
            android:id="@+id/weight_num3"
            style="@style/picker7"></NumberPicker>

        <TextView
            style="@style/unit_text"
            android:text="@string/kg"/>

    </LinearLayout>

    <Button
        android:id="@+id/next_step"
        style="@style/pink_btn"
        android:layout_marginRight="@dimen/btn_margin"
        android:layout_marginLeft="@dimen/btn_margin"
        android:text="@string/next_step" />

</LinearLayout>