<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sorena.kitadaharuka.reco.activities.NewChallengeActivity">

    <TextView
        android:id="@+id/challenge_ttl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:fontFamily="@font/montserrat"
        android:padding="10dp"
        android:text="@string/new_challenge"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/font_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/challenge_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/challenge_ttl" />

    <EditText
        android:id="@+id/challenge_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Textview1" />

    <android.support.v7.widget.GridLayout
        android:id="@+id/challenge_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:columnCount="5"
        app:rowCount="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/challenge_name">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1" />
    </android.support.v7.widget.GridLayout>

    <Button
        android:id="@+id/save"
        style="@style/pink_btn"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@+id/bottom_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/challenge_box" />

    <com.sorena.kitadaharuka.reco.views.BottomMenu
        android:id="@+id/bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:tag="run"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></com.sorena.kitadaharuka.reco.views.BottomMenu>

</android.support.constraint.ConstraintLayout>
